# inverted-pendulum

./: .gitignore  Makefile  d.diff  justfile  platformio.ini  serialprotocol.proto
client/gui/: hello.py  pend.py  pyproject.toml
python/: .gitignore  best_model.pth  justfile  pyproject.toml
python/gui/: main.py
python/serial_client/: client.py  test_client.py  xxtty.py
python/serial_client/tests/: test_serial_communication.py
python/src/: agent.py  best_model.pth  gui.py  gym_environment.py  metrics.json  out.profile  pid_test.py  plain.py  plt.py  rl_agent.py  rl_environment.py  rl_train.py  sac.py  serial_client.py  serial_mock.py  serial_virtual.py  t.py  test_client.py  test_move.py  test_serial.py  train.py  train_mm.py  train_old.py
python/src/agent/: sac.py
python/src/environment/: __init__.py  physical.py  pid_controller.py  pid_physical.py  sim.py
python/src/serial_communication/: client.py  mock.py  test_serial.py  virtual.py
python/src/tensorboard_logs/SAC_1/: events.out.tfevents.1740925666.M-YPDW3RKWDM.80330.0  events.out.tfevents.1740954179.M-YPDW3RKWDM.29684.0
python/src/tensorboard_logs/SAC_10/: events.out.tfevents.1740926694.M-YPDW3RKWDM.88860.0
python/src/tensorboard_logs/SAC_11/: events.out.tfevents.1740926727.M-YPDW3RKWDM.89205.0
python/src/tensorboard_logs/SAC_12/: events.out.tfevents.1740926760.M-YPDW3RKWDM.89543.0
python/src/tensorboard_logs/SAC_13/: events.out.tfevents.1740926815.M-YPDW3RKWDM.90033.0
python/src/tensorboard_logs/SAC_14/: events.out.tfevents.1740926852.M-YPDW3RKWDM.90418.0
python/src/wandb/: latest-run
(+161 files in other folders)
