[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dearpygui>=2.0.0",
    "pyserial>=3.5",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "screeninfo>=0.8.1",
    "watchgod>=0.8.2",
]
